--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@ body {
     background-color:lightskyblue;
     color: whitesmoke;
 }
+
+/*Flexbox*/
+.flexbox{
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    padding:2em;
+}
+
+.box{
+    width:100%;
+    background:lightseagreen;
+    border-radius: 2em;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    flex:1;
+}
+.box.links{
+    margin-right: 2em;
+    flex:1;
+}
+
+
 #posts { 
     border: 1px solid black;
 }
