--- a/style.css
+++ b/style.css
@@ -1,6 +1,42 @@
+/* Colors:
+rgb(235, 227, 209)
+
+
+*/
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color:lightskyblue;
-    color: whitesmoke;
+    background-color:white;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+h1{
+    color: white;
+    display: block;
+    font-size: 2em;
+    padding: 0.625em 2.5em 0.938em 2.5em;  
+    border-radius: 2em;
+}  
+h2{
+    color: white;
+    font-size: 2em;
+    padding: 1em 0.2em;
+}  
+h3{
+    color:white;
+    font-size: 2em;
+} 
+p{
+    color: white;
+    font-size: 1.5em;
+    padding-top:1em;
 }
 
 /*Flexbox*/
@@ -13,7 +49,7 @@ body {
 
 .box{
     width:100%;
-    background:lightseagreen;
+    background:rgb(235, 227, 209);
     border-radius: 2em;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -24,9 +60,86 @@ body {
     flex:1;
 }
 
+/*Navigations-Leiste*/
+nav {
+    position: sticky;
+    top: 0%;
+}
+ 
+nav li {
+    color: white;
+    padding: 0.5em 0.5em 0.313em 0.313em;
+    margin: 0.313em;
+    border-radius: 0.625em;
+    display: block;
+    text-decoration: none;
+    text-align: right;
+    
+}
 
-#posts { 
-    border: 1px solid black;
+
+nav li:hover{
+Background-color:rgb(235, 227, 209);
+transform: rotate(20deg)
+}   
+
+ul.a{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style-type: none;  
+}
+ul.a li{
+    float: right;
+}
+
+/* Login Bereich */
+
+input[type=text], select, textarea, input[type=password] {
+    background-color:white;
+    width: 50%;
+    padding: 0.375em;
+    border: none;
+    border-radius: 0.25em;
+    box-sizing: border-box;
+    margin-top: 0.25em;
+    margin-bottom: 0.625em;
+    resize: vertical;
+    
+    
+  }
+
+  
+/* Main Bereich */
+
+.spacePost {
+
+    margin: 5px;
+    padding: 5px;
+    height: 5rem;
+}
+
+/* Follow Bereich */
+
+.userDiv {
+    margin: 5px;
+    padding: 5px;
+    height: 5rem;
+}
+
+.userDiv > li {
+    text-decoration: none;
+    list-style: none;
+}
+
+/* Profil Bereich */
+
+#save-profile {
+    
+    width: 50%;
+    margin-bottom: 20px;
+    
 }
 
 .red-error{
